# talentscout

./: .gitignore  README.md  gradio_app.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_gradio.py  run_streamlit.py  streamlit_app.py
.streamlit/: config.toml
app/: page.tsx
components/ui/: progress.tsx
