[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentscout-ai-hiring-assistant"
version = "2.0.0"
description = "Advanced AI-Powered Technical Candidate Screening Platform"
authors = [
    {name = "TalentScout AI Team", email = "team@talentscout.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Human Resources",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["ai", "hiring", "recruitment", "chatbot", "streamlit", "technical-screening"]
dependencies = [
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/talentscout-ai-hiring-assistant"
Documentation = "https://github.com/yourusername/talentscout-ai-hiring-assistant#readme"
Repository = "https://github.com/yourusername/talentscout-ai-hiring-assistant"
"Bug Tracker" = "https://github.com/yourusername/talentscout-ai-hiring-assistant/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0"
]
